# primust-sdk

./: .gitignore  AUDIT_REPORT.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vitest.workspace.ts
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  entrypoint.sh  fly.toml  pyproject.toml
apps/api/scripts/: export_public_key.py
apps/api/src/primust_api/: __init__.py  auth.py  banned.py  db.py  kms.py  main.py  tsa.py
apps/api/src/primust_api/routes/: bundles.py  gaps.py  manifests.py  onboard.py  packs.py  proofs.py  reports.py  runs.py  signing_keys.py  vpecs.py  webhook.py  well_known.py
apps/api/src/primust_api/services/: bundle_seeder.py  byok_signer.py  code_generator.py  report_generator.py  webhook_dispatcher.py
apps/api/tests/: conftest.py  test_api.py  test_report_validator.py  test_schema.py  test_webhook.py
apps/dashboard/: .env.example  next.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/docs/: audit.html  audit.md  index.html  index.md  quickstart.html  quickstart.md  reference.html  reference.md  sdks.html  styles.css
apps/primust-com/: index.html  vercel.json
docs/: CANONICAL_AMENDMENT_v13_v9_v8.md  DECISIONS_v11.md  DECISIONS_v12.md  DECISIONS_v13.md  DECISION_audit_report_artifact.md  DECISION_crossorg_verification.md  DECISION_domain_neutral_positioning.md  DECISION_hook_binary_amdt16.md  MASTER_v8.md  MASTER_v9.md  MIGRATION_009_SPEC_v1.md  SONATYPE_SETUP.md  TECH_SPEC_v7.md  TECH_SPEC_v8.md
references/: QUARANTINE.md  SECURITY_AUDIT.md
schemas/: PROVISIONAL_FREEZE.md  SIGNER_TRUST_POLICY.md
scripts/: publish-adapters.sh  publish-go.sh  publish-jvm.sh  publish-npm.sh  publish-python.sh
sdk-csharp/: Primust.SDK.csproj  README.md
sdk-js/: package.json
sdk-python/: README.md  pyproject.toml
sdk-python/src/primust/: __init__.py  cli.py  models.py  pipeline.py  run.py  transport.py
sdk-python/src/primust/adapters/: __init__.py  crewai.py
sdk-python/src/primust/discovery/: analyzer.py  patterns.py
sdk-python/tests/: test_crewai_adapter.py  test_logger.py  test_pydantic_ai_adapter.py  test_sdk.py
sdk-python/tests/discovery_sample/llm/: generate.py
sdk-python/tests/discovery_sample/models/: classifier.py
sdk-python/tests/discovery_sample/tools/: langgraph_agent.py  search.py
sdk-python/tests/discovery_sample/validators/: pii.py
(+380 files in other folders)
