[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "primust"
version = "1.0.0"
description = "Prove your governance checks ran. Portable, offline-verifiable cryptographic credentials."
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
authors = [{ name = "Primust, Inc.", email = "oss@primust.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "cryptography>=41.0",
  "primust-artifact-core>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21.0",
]

[project.scripts]
primust = "primust.cli:main"

[project.urls]
Homepage = "https://primust.com"
Documentation = "https://docs.primust.com"
Verify = "https://verify.primust.com"

[tool.hatch.build.targets.wheel]
packages = ["src/primust"]

[tool.pytest.ini_options]
testpaths = ["tests"]
