[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "primust-api"
version = "0.0.1"
description = "Primust control plane API (api.primust.com)"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/primust_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
